spec/support/edi_files/valid/997/6.EDI
ISA*00*          *00*          *ZZ*ANCO           *ZZ*ANDPRE         *130117*1000*U*00401*000003291*1*P*>…GS*FA*ANCO*ANDPRE*20130117*1000*1386*X*004010…ST*997*0001…AK1*PC*3347…AK9*A*3*3*3…SE*4*0001…GE*1*1386…IEA*1*000003291…