spec/support/edi_files/invalid/8.EDI
ISA*00*          *00*          *ZZ*ANCO           *ZZ*ANDPRE         *130104*1000*U*00401*000003249*1*P*>…GS*FA*ANCO*ANDPRE*20130104*1000*1371*X*004010…ST*997*0001…AK1*PC*3321…AK9*A*5*5*5…SE*4*0001…GE*1*1371…IEA*1*000003249…ISA*00*          *00*          *ZZ*ANCO          *ZZ*ANDPRE         *130104*1000*U*00401*000003250*1*P*>…GS*FA*ANCO*ANDPRE*20130104*1000*1372*X*004010…ST*997*0001…AK1*PO*3322…AK9*A*3*3*3…SE*4*0001…GE*1*1372…IEA*1*000003250…